--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
+
 body{
-    margin: 0;
-    background-color: orange;
+    background-color: rgb(89, 255, 200);
     font-family: 'Alkatra', cursive;
 }
 h1{
@@ -17,15 +17,17 @@ main,#scoreboard{
     text-align: center;
 }
 #scoreboard{
-    color: deeppink;
+    color: rgb(141, 0, 75);
 }
 
 h2{
     width: 100%;
     margin: 10px;
+    text-align: center;
 }
 h3{
     margin: 5px;
+    font-size: 24px;
 }
 main > div{
     width: 30%;
@@ -33,8 +35,27 @@ main > div{
 main img{
     width: 100%;
 }
-main p{
+#scoreboard div{
+    border:firebrick 5px solid;
+    border-radius: 14px;
+}
+p{
     font-size: 24px;
     text-align: center;
     margin: 0;
+}
+
+#gameLog{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.tie{
+    color: rgb(189, 160, 0);
+}
+.win{
+    color: green;
+}
+.lose{
+    color: red;
 }
