--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h3{
     font-size: 24px;
 }
 main > div{
-    width: 30%;
+    width: 25%;
 }
 main img{
     width: 100%;
@@ -48,6 +48,7 @@ p{
 #gameLog{
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 .tie{
@@ -58,4 +59,13 @@ p{
 }
 .lose{
     color: red;
+}
+#gameLog button{
+    font-size: 24px;
+    padding:10px 20px;
+    border: solid saddlebrown 5px;
+    border-radius: 7px;
+    background-color: goldenrod;
+    color: darkmagenta;
+    font-weight: bold;
 }
